syntax = "proto3";

option go_package = "github.com/zmicro-team/zim/proto/common";
package github.com.zmicro.team.zim.proto.common;

message Msg {
  string owner = 1;
  int64 id = 2;
  int32 conv_type = 3;
  int32 type = 4;
  string content = 5;
  string sender = 6;
  string target = 7;
  string extra = 8;
  int64 send_time = 9;
  repeated string at_user_list = 10;
  int64 read_time = 11;
  string client_uuid = 12;
  bool is_transparent = 13;
}


message MergerMsgItem {
  int64 id = 1;
  string nickname = 2;
  string avatar = 3;
  int32 type = 4;
  string content = 5;
  int64 send_time = 6;
}

message Conversation {
  int32 type = 1;
  string target = 2;
  bool is_top = 3;
  bool is_mute = 4;
  string remark = 5;
  int64 peer_last_read = 6;
  int64 peer_last_recv = 7;
  int64 updated_at = 8;
  int64 unread_count = 9;
  Msg last_msg = 10;
}

message Member {
  string uin = 1;
  string role = 2;
}

message PushMsg {
  string server = 1;
  repeated string devices = 2;
  bytes msg = 3;
}



